@@ -3,6 +3,8 @@
 # after adding files here. two next line MUST always be here (it is not sorted)
 src/gui/siril3.glade
 src/gui/siril-shortcuts.ui
+src/main-cli.c
+src/main.c
 src/algos/annotate.c
 src/algos/astrometry_solver.c
 src/algos/background_extraction.c
@@ -16,17 +18,14 @@ src/algos/noise.c
 src/algos/photometry.c
 src/algos/PSF.c
 src/algos/quality.c
-src/algos/quality_float.c
 src/algos/reconstr.c
-src/algos/siril_wcs.c
+src/algos/search_objects.c
 src/algos/star_finder.c
 src/algos/statistics.c
 src/algos/statistics_float.c
 src/algos/transform.c
-src/algos/search_objects.c
 src/compositing/align_rgb.c
 src/compositing/compositing.c
-src/compositing/filters.c
 src/core/arithm.c
 src/core/command.c
 src/core/command_def.h
@@ -40,9 +39,8 @@ src/core/sequence_filtering.c
 src/core/settings.c
 src/core/signals.c
 src/core/siril.c
+src/core/siril.h
 src/core/siril_actions.c
-src/core/siril_app_dirs.c
-src/core/siril_cmd_help.c
 src/core/siril_language.c
 src/core/siril_log.c
 src/core/siril_update.c
@@ -63,17 +61,14 @@ src/filters/scnr.c
 src/filters/starnet.c
 src/filters/wavelets.c
 src/gui/about_dialog.c
-src/gui/annotations_pref.c
 src/gui/astrometry_solver.c
 src/gui/callbacks.c
 src/gui/conversion.c
 src/gui/dialog_preview.c
-src/gui/dialogs.c
 src/gui/histogram.c
 src/gui/image_display.c
 src/gui/image_interactions.c
 src/gui/linear_match.c
-src/gui/menu_gray_psf.c
 src/gui/message_dialog.c
 src/gui/nina_light_curve.c
 src/gui/open_dialog.c
@@ -91,7 +86,6 @@ src/gui/single_image.c
 src/gui/siril_css.c
 src/gui/siril_intro.c
 src/gui/siril_preview.c
-src/gui/starnetgui.c
 src/gui/statistics_list.c
 src/gui/utils.c
 src/io/catalogues.c
@@ -99,9 +93,9 @@ src/io/conversion.c
 src/io/films.c
 src/io/fits_sequence.c
 src/io/FITS_symlink.c
-src/io/image_format_fits.c
 src/io/image_formats_internal.c
 src/io/image_formats_libraries.c
+src/io/image_format_fits.c
 src/io/mp4_output.c
 src/io/seqfile.c
 src/io/sequence.c
@@ -111,18 +105,15 @@ src/io/ser.c
 src/io/single_image.c
 src/livestacking/gui.c
 src/livestacking/livestacking.c
-src/main.c
 src/opencv/opencv.cpp
 src/pixelMath/pixel_math_runner.c
-src/pixelMath/tinyexpr.c
 src/registration/3stars.c
+src/registration/applyreg.c
 src/registration/comet.c
 src/registration/global.c
 src/registration/registration.c
-src/registration/applyreg.c
 src/stacking/median_and_mean.c
 src/stacking/normalization.c
-src/stacking/rejection_float.c
 src/stacking/stacking.c
 src/stacking/stackminmax.c
 src/stacking/sum.c
