@@ -304,7 +304,7 @@ int apply_rejection_float(struct _data_block *data, int nb_frames,
 
 		memcpy(w_stack, stack, N * sizeof(float));
 		memset(rejected, 0, N * sizeof(int));
-
+		int cold = 0;
 		for (int iter = 0, size = N; iter < max_outliers; iter++, size--) {
 			float Gstat;
 			int max_index = 0;
@@ -312,7 +312,7 @@ int apply_rejection_float(struct _data_block *data, int nb_frames,
 			grubbs_stat(w_stack, size, &Gstat, &max_index);
 			out[iter].out = check_G_values(Gstat, args->critical_value[iter + removed]);
 			out[iter].x = w_stack[max_index];
-			out[iter].i = max_index;
+			out[iter].i = (max_index == 0) ? cold++ : max_index;
 			remove_element(w_stack, max_index, size);
 		}
 		confirm_outliers(out, max_outliers, median, rejected, crej);
