@@ -49,6 +49,7 @@ v1.0.4 XX XX, 2022
 XX/XX/22
 * Fixed selected area for flat autonormalisation calc
 * Fixed wrong initialization in polynomial background extraction
+* Fixed cold pixels rejection in GESDT stacking
 
 v1.0.3 June 28, 2022
 
